# ecat_sh_hardware

./: CMakeLists.txt  README.md  install.sh
include/ecat_sh_hardware/: bms_uart.hpp  controller.hpp  ecat_hardware.hpp  io_tcp_server.hpp  kinematics.hpp  ros_communication.hpp  shared_memory_handler.hpp  shared_obj.hpp  utils.hpp
service/: ecat_control-start.sh  ecat_control.service  ecat_hardware-start.sh  ecat_hardware.service
src/: bms_uart.cpp  controller.cpp  ecat_hardware.cpp  io_tcp_server.cpp  kinematics.cpp  ros_communication.cpp  shared_memory_handler.cpp  utils.cpp
